--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^5.2.1",
     "@tanstack/react-query": "^5.85.5",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "react": "^19.0.0",
@@ -19,6 +21,7 @@
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
